--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.3.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1"
   }
