--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,8 @@ package = "@netlify/plugin-nextjs"
 [[redirects]]
   from = "/checkout1"
   to = "https://tbd-j6.mybigcommerce.com/checkout"
+  status = 200
+  force = true
 
 [[redirects]]
   from = "/test1"
